--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curency-exchange",
-  "homepage": "https://pavelhack.github.io/Curency-Exchange",
+  "homepage": "https://pavelhack.github.io/CurrenyTEST",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
