--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "antd": "^4.15.0",
     "fs": "0.0.1-security",
     "gh-pages": "3.1.0",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
+    "i": "^0.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
